[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["EkeMinusYou <euonymuslke+develop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.942"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
