[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["EkeMinusYou <euonymuslke+develop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
